refact : 블로그 설명 변경

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              에어릭스 환경시스템사업부 기술블로그
 email:              sanghoon.lee@aerix.co.kr
-description:        불평은 그만! 놀면서 공부하고, 즐기면서 일하자! <br>기술연구소&개발팀의 좌충우돌 성장기
+description:        에어릭스 환경시스템사업부 기술연구소/개발팀 이야기
 author:             (주)에어릭스
 baseurl:            ""
 url:                "https://sanghoon-lee.github.io"
