feat : 포스팅 글 수정

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              에어릭스 환경시스템사업부 기술블로그
 email:              sanghoon.lee@aerix.co.kr
-description:        에어릭스 환경시스템사업부 기술연구소/개발팀 이야기
+description:        IT기업이 아닌 에어릭스의 개발자들
 author:             (주)에어릭스
 baseurl:            ""
 url:                "https://sanghoon-lee.github.io"
